# shareframe-board

./: .env.secrets.example.toml  .gitignore  CMakeLists.txt  LICENSE  README.md  config.dev.example.toml  config.toml
apps/application/: main.cpp
apps/dashboard/: main.cpp
apps/display/: main.cpp
apps/heartbeat/: main.cpp
apps/migrate/: main.cpp
apps/service/: main.cpp
apps/update/: main.cpp
apps/websocket/: main.cpp
assets/nginx/: 502-error.html  shareframe-dashboard.conf
dashboard/: docker-compose.yml
dashboard-frontend/: .env.prod  docker-compose.yml
dashboard-frontend/frontend/: Dockerfile  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard-frontend/frontend/public/: site.webmanifest
dashboard-frontend/frontend/src/: App.tsx
dashboard-frontend/frontend/src/assets/sidebarMenu/: sideBarMenu.ts
dashboard-frontend/frontend/src/common/components/: logo.tsx  networkStatusBanner.tsx  notFound.tsx  powerDialogs.tsx  powerMenu.tsx  protectedRoute.tsx  routerContext.tsx  shareframeDialog.tsx  shareframeInfoCard.tsx
dashboard-frontend/frontend/src/common/themes/: commonThemeOptions.ts  darkTheme.ts
dashboard-frontend/frontend/src/common/utils/: fetch.ts
dashboard-frontend/frontend/src/context/piConnection/: piConnectionContext.tsx
dashboard-frontend/frontend/src/hooks/: useTimer.tsx
dashboard-frontend/frontend/src/main/displayHealth/: displayHealth.tsx
dashboard-frontend/frontend/src/main/frame/: frameActions.tsx
dashboard-frontend/frontend/src/main/general/: general.tsx
dashboard-frontend/frontend/src/main/network/: network.tsx
dashboard-frontend/frontend/src/routes/: routing.tsx
dashboard-frontend/frontend/src/store/: index.ts  migrations.ts  rootReducer.tsx
dashboard-frontend/frontend/src/types/: index.ts  types.app.ts  types.frameLogs.ts  types.services.ts
dashboard/frontend/: Dockerfile  index.html  tsconfig.json  vite.config.js  vite.config.ts
dashboard/frontend/src/: App.tsx  main.tsx
dashboard/frontend/src/routes/: routing.tsx
dashboard/frontend/src/types/: types.frameLogs.ts
include/app/: Bootstrap.hpp
include/auth/: AuthTokenManager.hpp  Ed25519Auth.hpp  FrameIdentity.hpp  HTTPAuth.hpp  PasswordHash.hpp  ServerSignedResponse.hpp  TokenAuth.hpp
include/config/: AppConfig.hpp  ConfigLoader.hpp  Profile.hpp
include/dashboard/: DashboardServer.hpp  FrameHandlers.hpp  LoginThrottle.hpp  ResponseUtil.hpp  ServiceHandlers.hpp  SessionManager.hpp  SystemHandlers.hpp  UpdateHandlers.hpp  Validation.hpp  WifiHandlers.hpp  WifiManager.hpp
include/db/: Database.hpp  ITokenRepository.hpp  MigrationRunner.hpp  Token.hpp
include/db/repository/: TokenRepository.hpp
include/display/: DisplayManager.hpp
include/events/: EventBus.hpp  Messages.hpp  Topic.hpp
include/image/: ImageManager.hpp
include/ipc/: EventBridge.hpp  EventPublisher.hpp  EventSubscriber.hpp  EventTopics.hpp  HealthCheck.hpp  IpcClient.hpp  IpcProtocol.hpp  IpcServer.hpp  NngRepServer.hpp
include/logging/: ConsoleLogger.hpp  FileLogger.hpp  ILogger.hpp  LogSanitizer.hpp  Logger.hpp
include/net/: ConfigSender.hpp  HTTPClient.hpp  WebsocketClient.hpp  WsCloseCodes.hpp  WsProtocol.hpp
include/repository/: DisplayMetricsRepository.hpp  IImageRepository.hpp  ITokenRepository.hpp  ImageRepository.hpp  SettingsRepository.hpp  TokenRepository.hpp
include/repository/entity/: Image.hpp
include/settings/: RuntimeSettings.hpp
include/task/: ConfigSender.hpp  DisplayClear.hpp  DisplayImageLoop.hpp  ExpiredImageCleanup.hpp  Heartbeat.hpp  ImageCheck.hpp  ImageUpdate.hpp  MissingImageCheck.hpp  PeriodicTask.hpp  Task.hpp
include/update/: UpdateManager.hpp
include/util/: Base64.hpp  FileHash.hpp  HttpUtil.hpp  NonInstantiable.hpp  Subprocess.hpp
migrations/: 001_create_tokens.sql  002_create_images.sql  004_create_display_metrics.sql
rest-collection/shareframe-board/: opencollection.yml
rest-collection/shareframe-board/dashboard/auth/: change-password.yml  check-auth.yml  login.yml  logout.yml  status.yml
rest-collection/shareframe-board/dashboard/connection/: ap-password.yml  connect.yml  folder.yml  forget.yml  mode.yml  rename.yml  saved-networks.yml  status.yml
rest-collection/shareframe-board/dashboard/services/: folder.yml  list.yml  restart.yml
rest-collection/shareframe-board/dashboard/slideshow/: clear.yml  display-stats.yml  folder.yml  get-interval.yml  skip-image.yml  slideshow-control.yml  status.yml  update-interval.yml
rest-collection/shareframe-board/dashboard/system/: check-internet.yml  folder.yml  health.yml  info.yml  latest-update.yml  logs.yml  perform-update.yml  restart.yml  shutdown.yml  update-history.yml  update-status.yml
rest-collection/shareframe-board/environments/: local.yml
src/: main.cpp
src/app/: Bootstrap.cpp
src/auth/: AuthTokenManager.cpp  Ed25519Auth.cpp  FrameIdentity.cpp  HTTPAuth.cpp  PasswordHash.cpp  ServerSignedResponse.cpp  TokenAuth.cpp
src/config/: AppConfig.cpp  ConfigLoader.cpp
src/dashboard/: DashboardServer.cpp  FrameHandlers.cpp  IpcClient.cpp  ServiceHandlers.cpp  SessionManager.cpp  SystemHandlers.cpp  UpdateHandlers.cpp  WifiHandlers.cpp  WifiManager.cpp
src/db/: Database.cpp  MigrationRunner.cpp  TokenRepository.cpp
src/db/repository/: TokenRepository.cpp
src/display/: DisplayManager.cpp
src/image/: ImageManager.cpp
src/ipc/: EventBridge.cpp  EventPublisher.cpp  EventSubscriber.cpp  IpcClient.cpp  IpcServer.cpp  NngRepServer.cpp
src/logging/: ConsoleLogger.cpp  FileLogger.cpp  Logger.cpp
src/net/: ConfigSender.cpp  HTTPClient.cpp  Heartbeat.cpp  WebsocketClient.cpp
src/repository/: DisplayMetricsRepository.cpp  ImageRepository.cpp  SettingsRepository.cpp  TokenRepository.cpp
src/settings/: RuntimeSettings.cpp
src/task/: ConfigSender.cpp  DisplayClear.cpp  DisplayImageLoop.cpp  ExpiredImageCleanup.cpp  Heartbeat.cpp  ImageCheck.cpp  ImageUpdate.cpp  MissingImageCheck.cpp  PeriodicTask.cpp  Task.cpp
src/update/: UpdateManager.cpp
src/util/: Base64.cpp  FileHash.cpp  Subprocess.cpp
(+69 files in other folders)
